# lotto

./: .gitignore  Cargo.toml  LICENSE
src/: core.rs  lib.rs  main.rs  runner.rs
src/core/: game.rs  rules.rs  runner.rs
