[package]
name = "lotto"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
strip = true  # strip symbols from binary. Especially makes a huge difference for Windows.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="~0.8.5"
env_logger = "~0.10.0"
log = "~0.4.20"
